# numeronym

./: Cargo.toml  LICENSE  README.md
.github/workflows/: aarch64-apple-darwin.yml  release.yml  x86_64-apple-darwin.yml  x86_64-unknown-linux-gnu.yml
src/: lib.rs  main.rs
