[package]
name = "numeronym"
version = "1.3.0"
edition = "2021"
author = "n01e0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/n01e0/numeronym"
description = "n7m"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "numeronym"
path = "src/lib.rs"

[[bin]]
name = "numeronym"
path = "src/main.rs"
